--- a/staff/nicolas-postigo/huertea-app/package.json
+++ b/staff/nicolas-postigo/huertea-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "emoji-dictionary": "^1.0.11",
+    "mongoose": "^5.10.17",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
